[gd_scene load_steps=17 format=3 uid="uid://dx021aa4tejww"]

[ext_resource type="Script" uid="uid://dvrl1vh7ug3qs" path="res://game/game_manager.gd" id="1_hu71m"]
[ext_resource type="Shader" uid="uid://vw787p7laj5g" path="res://shader/colorrect_dither.gdshader" id="2_vasa2"]
[ext_resource type="Material" uid="uid://b0jh41rbjebbh" path="res://ui/cursor_material.tres" id="2_vsp63"]
[ext_resource type="Material" uid="uid://bjogvsw4gy3nw" path="res://ui/cursor_highlight_material.tres" id="3_b686c"]
[ext_resource type="PackedScene" uid="uid://dqw71n8563mph" path="res://ui/in_game_inventory_control.tscn" id="3_h7iqs"]
[ext_resource type="PackedScene" uid="uid://clmb0ahu2wc0x" path="res://ui/crafting_control.tscn" id="4_dxrkv"]
[ext_resource type="PackedScene" uid="uid://c62hdy2mscvx4" path="res://ui/shop_control.tscn" id="4_l8g03"]
[ext_resource type="PackedScene" uid="uid://bv7byv1367fl7" path="res://ui/equip_slot_panel_container.tscn" id="5_dxrkv"]
[ext_resource type="Script" uid="uid://senrvwbpipud" path="res://ui/status_panel_container.gd" id="5_u5opy"]
[ext_resource type="Script" uid="uid://dalvnlugoin2q" path="res://ui/item_dragging.gd" id="6_dakft"]
[ext_resource type="Script" uid="uid://c0kh1swpwvenp" path="res://ui/message_buffer.gd" id="7_y36n6"]
[ext_resource type="Texture2D" uid="uid://bjqi6s11xoni4" path="res://sprites/journal.png" id="9_3vho3"]
[ext_resource type="PackedScene" uid="uid://dx24jl1rrfiax" path="res://ui/journal_control.tscn" id="9_j8tme"]
[ext_resource type="Script" uid="uid://btuomcey2vju7" path="res://ui/journal_panel_container.gd" id="9_qf6n1"]

[sub_resource type="BoxMesh" id="BoxMesh_vasa2"]
size = Vector3(0.1, 0.1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h7iqs"]
shader = ExtResource("2_vasa2")
shader_parameter/quantize_size = 2.0
shader_parameter/handle_scale = true
shader_parameter/handle_subpixels = true
shader_parameter/dither_enabled = true
shader_parameter/bayer_pattern = 3.0
shader_parameter/divisions = 3.0
shader_parameter/contrast = 1.0
shader_parameter/shift = 0.0
shader_parameter/grayscale = false
shader_parameter/use_palette = false

[node name="Game" type="Node3D"]
script = ExtResource("1_hu71m")
cursor_material = ExtResource("2_vsp63")
cursor_highlight_material = ExtResource("3_b686c")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 9.29654, 12.1536, 11.6766)
fov = 60.0

[node name="Cursor" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cursor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_vasa2")
surface_material_override/0 = ExtResource("2_vsp63")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cursor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_vasa2")
surface_material_override/0 = ExtResource("2_vsp63")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cursor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.18557e-08, 0, -0.5)
cast_shadow = 0
mesh = SubResource("BoxMesh_vasa2")
surface_material_override/0 = ExtResource("2_vsp63")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cursor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.18557e-08, 0, 0.5)
cast_shadow = 0
mesh = SubResource("BoxMesh_vasa2")
surface_material_override/0 = ExtResource("2_vsp63")

[node name="PostProcessing" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = SubResource("ShaderMaterial_h7iqs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ToolTipLabel" type="Label" parent="GUI"]
offset_right = 40.0
offset_bottom = 28.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8

[node name="ShopControl" parent="GUI" instance=ExtResource("4_l8g03")]

[node name="MessageBuffer" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("7_y36n6")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MessageBuffer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InventoryControl" parent="GUI" instance=ExtResource("3_h7iqs")]
offset_top = -146.0
offset_bottom = -146.0

[node name="CraftingControl" parent="GUI" instance=ExtResource("4_dxrkv")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="StatusPanelContainer" type="PanelContainer" parent="GUI" node_paths=PackedStringArray("equip_panels", "stamina_label", "money_label", "depth_label")]
custom_minimum_size = Vector2(0, 70)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8
script = ExtResource("5_u5opy")
equip_panels = [NodePath("HBoxContainer/EquipSlotPanelContainer"), NodePath("HBoxContainer/EquipSlotPanelContainer2"), NodePath("HBoxContainer/EquipSlotPanelContainer3"), NodePath("HBoxContainer/EquipSlotPanelContainer5")]
stamina_label = NodePath("HBoxContainer/VBoxContainer/StaminaRichTextLabel")
money_label = NodePath("HBoxContainer/VBoxContainer/MoneyRichTextLabel")
depth_label = NodePath("HBoxContainer/VBoxContainer/DepthRichTextLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/StatusPanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/StatusPanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -2
alignment = 1

[node name="StaminaRichTextLabel" type="RichTextLabel" parent="GUI/StatusPanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Stamina:"
fit_content = true
autowrap_mode = 0

[node name="MoneyRichTextLabel" type="RichTextLabel" parent="GUI/StatusPanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Money:"
fit_content = true
autowrap_mode = 0

[node name="DepthRichTextLabel" type="RichTextLabel" parent="GUI/StatusPanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Depth:"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/StatusPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="EquipSlotPanelContainer5" parent="GUI/StatusPanelContainer/HBoxContainer" instance=ExtResource("5_dxrkv")]
layout_mode = 2
equip_flag = 8

[node name="VSeparator" type="VSeparator" parent="GUI/StatusPanelContainer/HBoxContainer"]
layout_mode = 2

[node name="EquipSlotPanelContainer" parent="GUI/StatusPanelContainer/HBoxContainer" instance=ExtResource("5_dxrkv")]
layout_mode = 2
equip_flag = 4

[node name="EquipSlotPanelContainer2" parent="GUI/StatusPanelContainer/HBoxContainer" instance=ExtResource("5_dxrkv")]
layout_mode = 2
equip_flag = 1

[node name="EquipSlotPanelContainer3" parent="GUI/StatusPanelContainer/HBoxContainer" instance=ExtResource("5_dxrkv")]
layout_mode = 2
equip_flag = 32

[node name="PanelContainer" type="PanelContainer" parent="GUI/StatusPanelContainer/HBoxContainer"]
self_modulate = Color(0.623529, 0.623529, 0.623529, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_type_variation = &"PanelContainerSimple"
script = ExtResource("9_qf6n1")

[node name="Sprite2D" type="Sprite2D" parent="GUI/StatusPanelContainer/HBoxContainer/PanelContainer"]
position = Vector2(40, 40)
scale = Vector2(2, 2)
texture = ExtResource("9_3vho3")

[node name="JournalControl" parent="GUI" instance=ExtResource("9_j8tme")]

[node name="ItemDragging" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_dakft")
